# Qwen-2.5-1.5B-GRPO

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
configs/: eval.yaml  eval_grpo.yaml  eval_sft.yaml  grpo.yaml  sft.yaml
docs/grpo-only/: CODEBASE-MAP.md  CONTEXT.md  PLAN.md
docs/superpowers/plans/: 2026-06-23-grpo-gsm8k.md
scripts/: eval.py  plot_results.py  run_all_tests.sh  run_grpo.py  run_sft.py
src/grpo_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/grpo_env/algo/: advantage.py  grpo_loop.py
src/grpo_env/envs/: base.py  gsm8k.py  sft_data.py
src/grpo_env/eval/: harness.py  hf_backend.py  vllm_backend.py
src/grpo_env/rewards/: gsm8k_reward.py  parsing.py
src/grpo_env/utils/: prompts.py
tests/: test_advantage.py  test_advantage_matches_trl.py  test_grpo_loop.py  test_gsm8k_env.py  test_gsm8k_reward.py  test_harness.py  test_parsing.py  test_seeding.py  test_sft_data.py  test_vllm_backend.py
