[project]
name = "grpo-env"
version = "0.1.0"
description = "Verifiable-reward RL environment + GRPO post-training on GSM8K"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "trl>=0.12",
    "datasets>=3.0",
    "accelerate>=1.0",
    "deepspeed>=0.15",
    "vllm>=0.6.3",
    "wandb>=0.18",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:TRL currently supports vLLM:UserWarning",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning",
]
